# winrun4j

./: CHANGES.md  README.md
WinRun4J/: .gitignore  .project  CMakeLists.txt  buildme.txt
WinRun4J/cmake/: flags-common.cmake  flags-win32.cmake  flags-x64.cmake
WinRun4J/src/: ResourceEditor.cpp  WinRun4J.cpp  WinRun4J.rc
WinRun4J/src/common/: Dictionary.cpp  Dictionary.h  INI.cpp  INI.h  Icon.cpp  Log.cpp  Registry.cpp  Registry.h  Resource.cpp  Runtime.cpp  Runtime.h
WinRun4J/src/java/: Classpath.cpp  Classpath.h  JNI.cpp  VM.cpp  VM.h
WinRun4J/src/launcher/: DDE.cpp  EventLog.cpp  Native.cpp  Service.cpp  Shell.cpp  SplashScreen.cpp  Supervisor.cpp
WinRun4J/src/libffi/: closures.c  ffi.c  ffi.h  ffitarget.h  prep_cif.c
org.boris.winrun4j/java/src/org/boris/winrun4j/: FFI.java  INI.java  NativeBinder.java
